--- a/FromCliente/resources/package.json
+++ b/FromCliente/resources/package.json
@@ -1,7 +1,6 @@
 {
   "name": "resources",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon connect.js"
@@ -16,5 +15,6 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
